--- a/site/package.json
+++ b/site/package.json
@@ -18,7 +18,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "styled-components": "^5.3.11"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.11",
+    "yet-another-react-lightbox": "^3.12.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
