--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,7 +16,10 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-      - run: npm install & npm run build
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
